--- a/my-website/src/index.css
+++ b/my-website/src/index.css
@@ -15,3 +15,12 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'quicksand';
+    src: url('./fonts/quicksand-variablefont_wght-webfont.woff2') format('woff2'),
+         url('./fonts/quicksand-variablefont_wght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
